--- a/content/08-cardano-sidechains/01-basics/04-block-explorer.mdx
+++ b/content/08-cardano-sidechains/01-basics/04-block-explorer.mdx
@@ -15,7 +15,7 @@ When you use a block explorer, it will list fields and their contents. This docu
 significance of their contents.
 
 ## Glossary
-These are the field names commonly used in block explorers on the example EVM sidechain.
+These are the field names commonly used in block explorers on the proof of concept EVM sidechain.
 ## General terms
 <dl>
   <p></p><dt>
