--- a/content/08-cardano-sidechains/03-example-evm-sidechain.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain.mdx
@@ -1,6 +1,6 @@
 ---
-title: Example EVM Sidechain
-metaTitle: Example EVM Sidechain
+title: Proof of Concept EVM sidechain
+metaTitle: Proof of Concept EVM sidechain
 ---
 
 <!-- heading no content -->
