--- a/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
@@ -3,7 +3,7 @@ title: Network details
 metaTitle: Network details
 ---
 
-The Example EVM sidechain testnet environment consists of two networks:
+The proof of concept EVM sidechain testnet environment consists of two networks:
 
 1. EVM sidechain testnet (sidechain, SC)
 2. A *dedicated* Cardano testnet (main chain, MN)
@@ -17,7 +17,7 @@ The Example EVM sidechain testnet environment consists of two networks:
 
 ## Network utilities
 
-### Example EVM Sidechain
+### EVM Sidechain
 
 |  |  | 
 | --- | :---: |
