--- a/content/08-cardano-sidechains/03-example-evm-sidechain/05-sidechain-token.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/05-sidechain-token.mdx
@@ -5,7 +5,7 @@ metaTitle: SC_Token and Test ADA
 
 ## What is SC_Token?
 
-**SC_Token<sup>1</sup>** is the native token of the Cardano EVM sidechain Testnet. `SC_Token` can be moved between the main chain (Cardano) and the example EVM sidechain, and `SC_Token` is required to pay for gas. Test `SC_Token` carries no real-world value.
+**SC_Token<sup>1</sup>** is the native token of the Cardano EVM sidechain Testnet. `SC_Token` can be moved between the main chain (Cardano) and the EVM sidechain, and `SC_Token` is required to pay for gas. Test `SC_Token` carries no real-world value.
 
 ### What is gas?
 
