--- a/content/08-cardano-sidechains/03-example-evm-sidechain/00-testnet-disclaimer.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/00-testnet-disclaimer.mdx
@@ -3,28 +3,28 @@ title: Testnet disclaimer
 metaTitle: Testnet disclaimer
 ---
 
-By using the example EVM sidechain testnet, you understand the sidechain is in
-development and that use of the example EVM sidechain testnet is entirely at your own
+By using the proof of concept (POC) EVM sidechain testnet, you understand the sidechain is in
+development and that use of the POC EVM sidechain testnet is entirely at your own
 risk.  
 
 You also acknowledge and agree to have an adequate understanding of the risks
-associated with use of the example EVM sidechain testnet and that all information and
+associated with use of the POC EVM sidechain testnet and that all information and
 materials published, distributed or otherwise made available on Cardano Docs is
 provided for non-commercial, personal use, and testing purposes only. This includes
 test currency tokens which have no economic value and are provided only for the purpose of
-testing on the example EVM sidechain testnet.  
+testing on the POC EVM sidechain testnet.  
 
-Example EVM sidechain testnet is available on an ‘AS IS’ and ‘AS AVAILABLE’ basis,
+The POC EVM sidechain testnet is available on an ‘AS IS’ and ‘AS AVAILABLE’ basis,
 without any representations or warranties of any kind. All implied terms are excluded to
 the fullest extent permitted by law. No party involved in, or having contributed to the
-development of, the example EVM sidechain testnet including any of their affiliates,
+development of, the POC EVM sidechain testnet including any of their affiliates,
 directors, employees, contractors, service providers or agents (the parties involved)
 accepts any responsibility or liability to you or any third parties in relation to any materials
-or information accessed via the example EVM sidechain testnet.  
+or information accessed via the POC EVM sidechain testnet.  
 
 You acknowledge and agree that the parties involved are not responsible for any damage
 to your computer systems, loss of data, or any other loss or damage resulting (directly or
-indirectly) from use of the example EVM sidechain testnet.  
+indirectly) from use of the POC EVM sidechain testnet.  
 
 Furthermore, the use of any third-party software tools or products (such as MetaMask,
 Truffle, etc.) is done at your own discretion and with the understanding that you will be
