--- a/content/01-introduction.mdx
+++ b/content/01-introduction.mdx
@@ -4,10 +4,9 @@ metaTitle: 'Introduction'
 metaDescription: 'Introduction'
 ---
 
-Welcome to the central hub for Cardano documentation. Here you will find content that describes and supports the features on Cardano mainnet and Cardano testnet. 
+Welcome to the central hub for Cardano documentation. Here you will find content that describes and supports the features on Cardano mainnet and [Cardano testnet environments](https://docs.cardano.org/cardano-testnet/overview). 
 
-This includes explainers, information on all the core components of Cardano, details of how Cardano was designed and its architecture, how the Cardano network works, explanations of the fee structure and monetary policy, release notes, a compatibility matrix, a glossary of terms, as well as community resources. We also have content to support native tokens and how to use Plutus and Marlowe.  
-
+This includes explainers, information on all the core components of Cardano, details of how Cardano was designed and its architecture, how the Cardano network works, explanations of the fee structure and monetary policy, release notes, a compatibility matrix, a glossary of terms, as well as community resources. There is also content to support native tokens and refernces to [Plutus](https://docs.cardano.org/plutus/plutus-resources) and Marlowe material.  
 If you are interested in building tools on Cardano, integrating with Cardano, and connecting with the wider developer community, please visit the [Cardano Developer Portal](https://developers.cardano.org/home/).
 
 **Cardano explained**
