--- a/content/14-tools/03-comp-matrix.mdx
+++ b/content/14-tools/03-comp-matrix.mdx
@@ -12,6 +12,7 @@ Please note that you should be using node version [1.35.4](https://github.com/in
 
 | [Cardano Node](https://github.com/input-output-hk/cardano-node/releases) | [Cardano DB Sync](https://github.com/input-output-hk/cardano-db-sync/releases) | [Smash](https://github.com/input-output-hk/smash/releases) | [Cardano Rosetta Server](https://github.com/input-output-hk/cardano-rosetta/releases) | [Cardano GraphQL](https://github.com/input-output-hk/cardano-graphql/releases) | [Cardano Explorer](https://github.com/input-output-hk/cardano-explorer-app/releases) | [Cardano Wallet](https://github.com/input-output-hk/cardano-wallet/releases) | 
 |---|---|---|---|---|---|---|
+| __[1.35.6](https://github.com/input-output-hk/cardano-node/releases/tag/1.35.6)__ |[13.0.5](https://github.com/input-output-hk/cardano-db-sync/releases/tag/13.0.5)/[13.1.0.0](https://github.com/input-output-hk/cardano-db-sync/releases/tag/13.1.0.0)|See DB Sync|[2.0.0](https://github.com/input-output-hk/cardano-rosetta/releases/tag/2.0.0)/ [2.1.0](https://github.com/input-output-hk/cardano-rosetta/releases/tag/2.1.0)|[7.0.2](https://github.com/input-output-hk/cardano-graphql/releases/tag/7.0.2) / [8.0.0](https://github.com/input-output-hk/cardano-graphql/releases/tag/8.0.0)|[1.6.0](https://github.com/input-output-hk/cardano-explorer-app/releases/tag/1.6.0)|[2022-12-14](https://github.com/input-output-hk/cardano-wallet/releases/tag/v2022-12-14)|
 | __[1.35.5](https://github.com/input-output-hk/cardano-node/releases/tag/1.35.5)__ |[13.0.5](https://github.com/input-output-hk/cardano-db-sync/releases/tag/13.0.5)/[13.1.0.0](https://github.com/input-output-hk/cardano-db-sync/releases/tag/13.1.0.0)|See DB Sync|[2.0.0](https://github.com/input-output-hk/cardano-rosetta/releases/tag/2.0.0)/ [2.1.0](https://github.com/input-output-hk/cardano-rosetta/releases/tag/2.1.0)|[7.0.2](https://github.com/input-output-hk/cardano-graphql/releases/tag/7.0.2) / [8.0.0](https://github.com/input-output-hk/cardano-graphql/releases/tag/8.0.0)|[1.6.0](https://github.com/input-output-hk/cardano-explorer-app/releases/tag/1.6.0)|[2022-12-14](https://github.com/input-output-hk/cardano-wallet/releases/tag/v2022-12-14)|
 | __[1.35.4](https://github.com/input-output-hk/cardano-node/releases/tag/1.35.4)__ |[13.0.5](https://github.com/input-output-hk/cardano-db-sync/releases/tag/13.0.5)/[13.1.0.0](https://github.com/input-output-hk/cardano-db-sync/releases/tag/13.1.0.0)|See DB Sync|[2.0.0](https://github.com/input-output-hk/cardano-rosetta/releases/tag/2.0.0) / [2.1.0](https://github.com/input-output-hk/cardano-rosetta/releases/tag/2.1.0)|[7.0.2](https://github.com/input-output-hk/cardano-graphql/releases/tag/7.0.2) / [8.0.0](https://github.com/input-output-hk/cardano-graphql/releases/tag/8.0.0)|[1.6.0](https://github.com/input-output-hk/cardano-explorer-app/releases/tag/1.6.0)|[2022-12-14](https://github.com/input-output-hk/cardano-wallet/releases/tag/v2022-12-14)|
 | __[1.35.3](https://github.com/input-output-hk/cardano-node/releases/tag/1.35.3)__ |[13.0.5](https://github.com/input-output-hk/cardano-db-sync/releases/tag/13.0.5)|TBC|[2.0.0](https://github.com/input-output-hk/cardano-rosetta/releases/tag/2.0.0)|[7.0.2](https://github.com/input-output-hk/cardano-graphql/releases/tag/7.0.2)|[1.6.0](https://github.com/input-output-hk/cardano-explorer-app/releases/tag/1.6.0)|[2022-10-06](https://github.com/input-output-hk/cardano-wallet/releases/tag/v2022-10-06)|
