--- a/content/08-cardano-ecosystem-tools/01-welcome.mdx
+++ b/content/08-cardano-ecosystem-tools/01-welcome.mdx
@@ -1,5 +1,6 @@
 ---
-title: Welcome: contribution guidelines
-metaTitle: Welcome: contribution guidelines
+title: Welcome – contribution guidelines
+metaTitle: Welcome – contribution guidelines
 ---
+
 Guidelines to be added shortly.
