try to fix internal heading links

--- a/content/08-cardano-ecosystem-tools/02-mesh.mdx
+++ b/content/08-cardano-ecosystem-tools/02-mesh.mdx
@@ -20,21 +20,21 @@ Like a well-woven fabric, Mesh connects business goals with technology stacks. I
 |----|---|
 | [Clean and intuitive APIs](https://meshjs.dev/apis/) | Whether you're a new developer, a startup, or a large enterprise, Mesh makes Web3 development easy with reliable, scalable, and well-engineered APIs & developer tools. |
 | [Mesh Playground](https://meshjs.dev/) | Mesh Playground is an interactive tool which allows you to explore Mesh's features. Most APIs are interactive, where you can modify the inputs and see how to use the code in your project. |
-| [Starter Kits](https://meshjs.dev/starter-templates) | Whether you are an NFT project that needs a multi-sig minting site, or an SPO who needs a website for your pool, pick from one of our starter kits, and get started in minutes. |
-| [React Components and Hooks](https://meshjs.dev/react/) | Mesh offers UI components you need to build your DApp, so you can jumpstart your next project and bring the user interface to life. |
+| [Starter kits](https://meshjs.dev/starter-templates) | Whether you are an NFT project that needs a multi-sig minting site, or an SPO who needs a website for your pool, pick from one of our starter kits, and get started in minutes. |
+| [React components and hooks](https://meshjs.dev/react/) | Mesh offers UI components you need to build your DApp, so you can jumpstart your next project and bring the user interface to life. |
 | [Interact with smart contracts](https://meshjs.dev/apis/transaction/smart-contract) | Locking and unlocking, minting and burning assets, designing datum and redeemer. Mesh provides everything you need to work with smart contracts. | 
 | [Guides](https://meshjs.dev/guides) | Whether you are new to web development or a seasoned blockchain full-stack developer, these guides will help you get started. |
-| [Offline Resolvers](https://meshjs.dev/apis/resolvers) | Many blockchain operations are computed locally without the need to fetch data from services. |
-| [Service Providers](https://meshjs.dev/providers) | Providers are services provided by the Cardano community, to help you ship your apps faster. |
-| [Always up to date](https://meshjs.dev/about) | Mesh is developed closely to network updates, your application will always be ready for the latest network changes, so you can focus on building your application. |
+| [Offline resolvers](https://meshjs.dev/apis/resolvers) | Many blockchain operations are computed locally without the need to fetch data from services. |
+| [Service providers](https://meshjs.dev/providers) | Providers are services provided by the Cardano community to help you ship your apps faster. |
+| [Always up to date](https://meshjs.dev/about) | Mesh is developed closely to network updates, your application will always be ready for the latest network changes. |
 
 ## Getting started on Web3 development with Mesh
 
 There are multiple ways to get started with Mesh:
 
-- [Starter Kits](#starter-kits)
+- [Starter kits](#starterkits)
 - [Guides](#guides)
-- [Migration or manual installation](#migration-manual-installation)
+- [Migration or manual installation](#migrationmanualinstallation)
 
 ## Starter kits
 
@@ -54,7 +54,7 @@ To start the installation, open your terminal and run the following CLI command:
 npx create-mesh-app your-app name
 ```
 
-You will be prompted with a few questions, you can pick one of the templates, choose a framework and select the language of your choice. The entire process should take less than 1 minute.
+You will be prompted with a few questions, you can pick one of the templates, choose a framework and select the language of your choice. The entire process should take less than one minute.
 
 ### Demeter
 
@@ -81,11 +81,11 @@ Whether you are new to web development or a seasoned blockchain full-stack devel
 |--|--|
 | [Start a Web3 app on Next.js](https://meshjs.dev/guides/nextjs) | A step-by-step guide to setup a Next.js web application, connect wallet and browse wallet's assets. |
 | [Minting on Node.js](https://meshjs.dev/guides/minting-on-nodejs) | Load a CLI generated key and mint assets on Node.js |
-| [Multi-Signatures Transaction (Minting)](https://meshjs.dev/guides/multisig-minting) | Create a multi-sig transaction and mint NFTs|
-| [Use Smart Contract with Mesh](https://meshjs.dev/guides/smart-contract) | A step-by-step guide to integrate your Cardano smart contract with a web application. |
-| [Cryptographically Prove Wallet Ownership](https://meshjs.dev/guides/prove-wallet-ownership) | Cryptographically prove the ownership of a wallet by signing a piece of data using data sign. |
+| [Multi-signature transactions (minting)](https://meshjs.dev/guides/multisig-minting) | Create a multi-sig transaction and mint NFTs|
+| [Use smart contract with Mesh](https://meshjs.dev/guides/smart-contract) | A step-by-step guide to integrate your Cardano smart contract with a web application. |
+| [Cryptographically prove wallet ownership](https://meshjs.dev/guides/prove-wallet-ownership) | Cryptographically prove the ownership of a wallet by signing a piece of data using data sign. |
 
-## Migration manual installation
+## Migration or manual installation
 
 If you are looking to use Mesh in your existing project, you can choose the stack and configure it.
 
