--- a/content/06-development-guidelines/05-operating-a-stake-pool/03-node-connectivity.mdx
+++ b/content/06-development-guidelines/05-operating-a-stake-pool/03-node-connectivity.mdx
@@ -11,7 +11,7 @@ block creation.
 
 Cardano's networking evolved from its initial federated structure to hybrid and the current Dynamic peer-to-peer (P2P) model. Networking will keep evolving with future additions such as Ouroboros Genesis and peer-sharing. See [this explainer](https://docs.cardano.org/explore-cardano/cardano-network/p2p-networking) for more details about network evolution and Dynamic P2P. 
 
-In a previous Hybrid setup, SPOs could configure a node to connect to, for example, 50 other SPO nodes. This is a pretty large number, since many nodes can be offline, change their addresses, etc. While 20 connections are enough for efficient communication, SPOs had to over-provision because of the static configuration.
+In a previous hybrid setup, SPOs could configure a node to connect to, for example, 50 other SPO nodes. This is a pretty large number, since many nodes can be offline, change their addresses, etc. While 20 connections are enough for efficient communication, SPOs had to over-provision because of the static configuration.
 
 In a Dynamic P2P setup, SPOs can target to configure 20 connections, which can be picked from thousands of SPO relays, not just 50. And if any are offline, or go offline, the setup will automatically pick new ones, to meet the set target. This means that the configuration is no longer limited to a static pool of 50 peers.
 
