--- a/content/05-cardano-testnet/03-getting-started.mdx
+++ b/content/05-cardano-testnet/03-getting-started.mdx
@@ -1,6 +1,6 @@
 ---
-title: Getting started
-metaTitle: Getting started with the Cardano testnet
+title: Getting started with Cardano testnets
+metaTitle: Getting started with the Cardano testnets
 ---
 
 >Note that the **Cardano testnet** is no longer recommended for testing purposes. The community is encouraged to use preview and pre-production testnet environments explained below. 
