--- a/content/08-cardano-sidechains/04-support/01-sidechain-faq.mdx
+++ b/content/08-cardano-sidechains/04-support/01-sidechain-faq.mdx
@@ -3,7 +3,7 @@ title: Sidechains FAQ
 metaTitle:  Sidechains FAQ
 ---
 
-This page answers some frequent questions for the Cardano Sidechains Toolkit and the example EVM sidechain application.
+This page answers some frequent questions for the Cardano Sidechains Toolkit and the proof of concept EVM sidechain application.
 
 ## The Cardano Sidechains Toolkit
 
@@ -17,7 +17,7 @@ Yes, it will be open-sourced under the Input Output Global GitHub repository.
 
 Yes, IOG is working in a less resource-intensive tool. There are other chain indexer tools such as [Oura](https://github.com/txpipe/oura) and [Carp](https://github.com/dcSpark/carp) that could serve the purpose of building a Cardano sidechain.
 
-## The Proof of Concept EVM sidechain application
+## The proof of concept EVM sidechain application
 
 These questions relate to the application that IOG built as a proof of concept, using the Cardano Sidechains Toolkit.
 
@@ -27,6 +27,6 @@ They are two separate solutions. [Hydra](https://iohk.io/en/blog/posts/2022/02/0
 
 The EVM sidechain brings Ethereum virtual machine (Solidity-based DApps) execution into Cardano via a sidechain.
 
-### Can you execute a Solidity smart contract on the Proof of Concept EVM sidechain? If this is possible, how do you go between the Ethereum (account model) to the Cardano (EUTXO) accounting model? 
+### Can you execute a Solidity smart contract on the proof of concept EVM sidechain? If this is possible, how do you go between the Ethereum (account model) to the Cardano (EUTXO) accounting model? 
 
 The EVM sidechain uses the account model so it is fully compatible with Ethereum-based apps. It doesn't use EUTXO.
