--- a/content/03-learn/02-cardano-node.mdx
+++ b/content/03-learn/02-cardano-node.mdx
@@ -3,8 +3,7 @@ title: Cardano nodes
 metaTitle: Cardano nodes
 ---
 
-The [Cardano node](https://docs.cardano.org/cardano-components/cardano-node) is the top-level component within the network. Network nodes
-connect to each other within the networking layer, which is the driving force
+The [Cardano node](https://github.com/input-output-hk/cardano-node#overview-of-the-cardano-node-repository) is the top-level component within the network. Network nodes connect to each other within the networking layer, which is the driving force
 for delivering information exchange requirements. This includes new block
 diffusion and transaction information for establishing a better data flow.
 Cardano nodes maintain connections with peers that have been chosen via a custom
