--- a/content/03-learn/02-cardano-node.mdx
+++ b/content/03-learn/02-cardano-node.mdx
@@ -17,7 +17,7 @@ network and are responsible for transaction processing and block production.
 They act as reliable server nodes that hold and maintain the combined stake of
 various stakeholders in a single entity.
 
-## Producing a bloc
+## Producing a block
 
 The goal of blockchain technology is the production of an
 independently-verifiable and cryptographically-linked chain of records (blocks).
