ETCM-3457 Added the agreed warning to claim and burn commands.

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/06-transferring-tokens.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/06-transferring-tokens.mdx
@@ -180,6 +180,8 @@ Example output:
   "transactionId": "1334b3dab421911af68b9393e5cc4756c46c9ab1ac567a57450597e174351a48"
 }
 ```
+**Warning:** Please note that this command can take some minutes to complete.  
+
 
 🎉 Congratulations! At this point, you have successfully claimed your `SC_Token` on the main chain.
 
@@ -196,6 +198,8 @@ To transfer `SC_Token` from the main chain to a sidechain, use the **sidechain-c
 --recipient ae3dffee97f92db0201d11cb8877c89738353bce \
 --amount 10
 ```
+**Warning:** Please note that this command can take some minutes to complete.  
+
 
 Understanding this command:
 
