Add Plutus-related repositorys by OpShin Toolchain
This adds a few interesting repositorys, notably a generic benchmark for Smart Contract (comparing performance), a generic optimizer for Smart Contracts based on plutonomy and a whole toolchain of Python based Smart Contract toolings.

--- a/content/11-plutus/02-plutus-resources.mdx
+++ b/content/11-plutus/02-plutus-resources.mdx
@@ -129,7 +129,12 @@ There are different tools that developers can use to evaluate and deploy smart c
     - [Plutonomicon - independent community Plutus documentation](https://github.com/Plutonomicon/plutonomicon/blob/main/README.md)
     - [Plutonomicon - GitHub Repositories](https://github.com/Plutonomicon)
     - [Plutonomicon - cardano-transaction-lib](https://github.com/Plutonomicon/cardano-transaction-lib#readme)
-    
+
+-   **OpShin**
+    - [opshin - Pythonic Smart Contract tooling](https://github.com/OpShin)
+    - [Smart Contract benchmark](https://github.com/OpShin/plutus-bench)
+    - [Generic Smart Contract Optimization CLI](https://github.com/OpShin/plutonomy-cli)
+
 -   **Harmonic**
     -  [HarmonicPool (Harmonic) - GitHub Repositories](https://github.com/HarmonicPool)
     
