ECS-2447 Point to IOG Academy's Cardano node course on YouTube

--- a/content/03-learn/02-cardano-node.mdx
+++ b/content/03-learn/02-cardano-node.mdx
@@ -61,6 +61,9 @@ transaction’s parameters are met. Assuming that the transaction meets all thes
 requirements, the slot leader will record it as a part of a new block, which
 will then be connected to other blocks in the chain.
 
+### Cardano node course
+The IOG Academy provides a series of [video tutorials](https://www.youtube.com/playlist?list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR) on YouTube that describe a variety of topics from installing the node to using many of its features.
+
 #### Related topics:
 
 -   [About the Cardano network](https://docs.cardano.org/explore-cardano/cardano-network/about-the-cardano-network)
