--- a/content/06-development-guidelines/00-installing-the-cardano-node.mdx
+++ b/content/06-development-guidelines/00-installing-the-cardano-node.mdx
@@ -5,8 +5,7 @@ metaTitle: Installing the Cardano node
 
 ## Cardano node course on YouTube
 
-The IOG Academy provides a video course on YouTube.  
-
+The IOG Academy provides the course below. You can view the course at your own pace, or you can follow the written instructions that follow the course description.  
 
 | Video | Summary |  
 | -------- | --------- |   
@@ -38,8 +37,6 @@ The IOG Academy provides a video course on YouTube.
 | [Creating a stake pool on the local cluster](https://www.youtube.com/watch?v=0svni-Dy4zM&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=25&pp=iAQB) | Video 26. Creating a local cluster; providing funds, keys, and configuration files for a new stake pool. |  
 | [Bringing the d parameter down](https://www.youtube.com/watch?v=LNUzmhdGPbY&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=26&pp=iAQB) | Video 27. Creating a local cluster; submitting a proposal to bring the decentralization parameter (d) down from 1 to 0.80. |  
 | [From Shelley to Alonzo](https://www.youtube.com/watch?v=mFyutul_5mU&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=27&pp=iAQB) | Video 28. Creating a local cluster; moving our local cluster from Shelley era to Alonzo. |  
-
-
 
 ## Downloading pre-compiled executables
 
