Correct spelling error.

--- a/content/06-development-guidelines/00-installing-the-cardano-node.mdx
+++ b/content/06-development-guidelines/00-installing-the-cardano-node.mdx
@@ -24,8 +24,8 @@ The IOG Academy provides the course below. You can view the course at your own p
 | [P2P networking](https://www.youtube.com/watch?v=7YyCJ3fDN0I&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=12&pp=iAQB) | Video 12. Peer-to-peer networking; a detailed explanation of dynamic peer-to-peer networking and its advantages. |  
 | [P2P networking; topology and configuration](https://www.youtube.com/watch?v=hOFVL6gjFrw&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=13&pp=iAQB) | Video 13. Peer-to-peer networking; how to configure the topology and configuration files for the different types of node. |  
 | [Creating a stake pool. The setup](https://www.youtube.com/watch?v=6AQaPdmxnfo&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=14&pp=iAQB) | Video 14. Creating a stake pool; recommended hardware layout and software configuration. |  
-| [Creating a stake pool. Generating stake pool keys](https://www.youtube.com/watch?v=xydi4_pqOdo&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=15&pp=iAQB) | Video 15. Creating a stake pool; a detailed demonstration and explanation of generating the required keys and other artefacts. |  
-| [Creating a stake pool. Registering the stake pool](https://www.youtube.com/watch?v=9UK_EFG-nkA&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=16&pp=iAQB) | Video 16. Creating a stake pool; using the artefacts created earlier to complete the registration. |  
+| [Creating a stake pool. Generating stake pool keys](https://www.youtube.com/watch?v=xydi4_pqOdo&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=15&pp=iAQB) | Video 15. Creating a stake pool; a detailed demonstration and explanation of generating the required keys and other artifacts. |  
+| [Creating a stake pool. Registering the stake pool](https://www.youtube.com/watch?v=9UK_EFG-nkA&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=16&pp=iAQB) | Video 16. Creating a stake pool; using the artifacts created earlier to complete the registration. |  
 | [Creating a stake pool. RTS, topology and systemd](https://www.youtube.com/watch?v=1CaMmsgFPnw&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=17&pp=iAQB) | Video 17. Creating a stake pool; the Haskell runtime options, how to extend and override them. Details of the topology files and the startup scripts. Using systemd to restart your node as required. |  
 | [Stake snapshots](https://www.youtube.com/watch?v=t5BOFmy6IYg&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=18&pp=iAQB) | Video 18. How to request test funds from the faucet. Details of stake distribution snapshots. |  
 | [Stake pool operations. Useful commands 1/2](https://www.youtube.com/watch?v=NCdsk75-7NA&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=19&pp=iAQB) | Video 19. Stake pool operations; useful commands for managing your stake pool; video one of two. |  
